--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   </head>
   <body>
 
-    <!-- Navigation Nar -->
+    <!-- Navigation Bar -->
 
-  <nav class="navbar navbar-expand-sm fixed-top navbar-light bg-light">
+  <nav class="navbar navbar-expand-sm py-3 fixed-top position-fixed w-100 border-bottom">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="#">Eugene Cheung</a>
+    <a class="navbar-brand pl-2" href="#">Eugene Cheung</a>
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav ml-auto align-content-center">
@@ -42,12 +42,66 @@
     </div>
   </nav>
 
-
-
-
-
   <!-- Hero content -->
+  <div id="hero" class="position-relative">
+    <div class="container-fluid align-self-center">
+      <div class="row justify-content-center align-items-center">
+          <div class="col-12 text-white my-auto mx-auto align-items-center justify-content-center">
+            <h1>Eugene Cheung</h1>
+          </div>
 
+          <div class="col-12 text-white my-auto mx-auto align-items-center justify-content-center">
+            <h5>Full-Stack Web Developer</h5>
+          </div>
+      </div>  <!-- close row -->
+
+      <div class="row justify-content-center align-items-center">
+        <div class="col-12 caption-2">
+          <div class="github">
+            <button class="btn btn-lg"><a href="#">Github</a></button>
+          </div>
+          <div class="linked-in">
+            <button class="btn btn-lg"><a href="#">Linked-In</a></button>
+          </div>
+        </div>
+      </div>    <!-- close row -->
+
+    </div>
+  </div>
+
+
+
+
+  <div class="container-fluid">
+    <div class="row">
+      <p>Next row</p>
+    </div>
+
+    <div class="row">
+      <div class="col-12 border w-100">
+        <p>level 1, row 2, col 1</p>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- <div id="hero" class="position-relative">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-auto mx-auto my-auto">
+          <h2 class="text-white  align-items-center">Eugene Cheung</h2>
+        </div>
+      </div>
+
+
+      <div class="row">
+        <div class="col-sm-12 col-md-4">
+          level 1, col-1
+        </div>
+      </div>
+
+    </div>  close container
+  </div> -->
 
 
   <!-- Optional JavaScript -->
