--- a/index.html
+++ b/index.html
@@ -18,33 +18,33 @@
 
     <!-- Navigation Bar -->
 
-  <nav class="navbar navbar-expand-sm py-3 fixed-top position-fixed w-100 border-bottom">
+  <nav class="navbar navbar-expand-sm py-3 fixed-top position-fixed w-100 border-bottom navbar-light">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand pl-2" href="#">Eugene Cheung</a>
+    <a class="navbar-brand pl-2 text-white" href="#">Eugene Cheung</a>
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav ml-auto align-content-center">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link active text-white" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Portfolio</a>
+          <a class="nav-link text-white" href="#">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link text-white" href="#">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link text-white" href="#">Contact</a>
         </li>
       </ul>
     </div>
   </nav>
 
   <!-- Hero content -->
-  <div id="hero" class="position-relative">
-    <div class="container-fluid align-self-center">
+  <div id="hero" class="position-relative border-bottom">
+    <div class="container-fluid align-self-center landing">
       <div class="row justify-content-center align-items-center">
           <div class="col-12 text-white my-auto mx-auto align-items-center justify-content-center">
             <h1>Eugene Cheung</h1>
@@ -58,7 +58,7 @@
       <div class="row justify-content-center align-items-center">
         <div class="col-12 caption-2">
           <div class="github">
-            <button class="btn btn-lg"><a href="#">Github</a></button>
+            <button class="btn btn-lg"><a href="https://github.com/eykcheung" target="_blank">Github</a></button>
           </div>
           <div class="linked-in">
             <button class="btn btn-lg"><a href="#">Linked-In</a></button>
@@ -72,36 +72,67 @@
 
 
 
-  <div class="container-fluid">
+  <div class="container-fluid portfolio">
     <div class="row">
-      <p>Next row</p>
+      <div class="col-12 text-center pt-5"><h3>Portfolio</h3></div>
     </div>
-
     <div class="row">
-      <div class="col-12 border w-100">
-        <p>level 1, row 2, col 1</p>
+      <!-- Website 1 -->
+      <div class="col-12 col-md-6 pt-5 pb-4">
+        <div class="image mb-3 border">
+          <a href="#"><img class="img-fluid w-100 unrounded" src="https://via.placeholder.com/333x222" /></a>
+        </div>
+        <h6 class="website-name"><strong><a href="#" class="website-link">Website 1</a></strong></h6>
+        <p class="website-description">A brief description of this webpage</p>
+        <p class="website-languages">HTML | CSS | Javascript</p>
       </div>
-    </div>
+
+      <!-- Website 2 -->
+      <div class="col-12 col-md-6 pt-5 pb-4 portfolio-item">
+        <div class="image mb-3 border">
+          <a href="#"><img class="img-fluid w-100 unrounded" src="https://via.placeholder.com/333x222" /></a>
+        </div>
+        <h6 class="website-name"><strong><a href="#" class="website-link">Website 2</a></strong></h6>
+        <p class="website-description">A brief description of this webpage</p>
+        <p class="website-languages">HTML | CSS | Javascript</p>
+      </div>
+
+      <!-- Website 3 -->
+      <div class="col-12 col-md-6 pt-5 pb-4 portfolio-item">
+        <div class="image mb-3 border">
+          <a href="#"><img class="img-fluid w-100 unrounded" src="https://via.placeholder.com/333x222" /></a>
+        </div>
+        <h6 class="website-name"><strong><a href="#" class="website-link">Website 3</a></strong></h6>
+        <p class="website-description">A brief description of this webpage</p>
+        <p class="website-languages">HTML | CSS | Javascript</p>
+      </div>
+
+      <!-- Website 4 -->
+      <div class="col-12 col-md-6 pt-5 pb-4 portfolio-item">
+        <div class="image mb-3 border">
+          <a href="#"><img class="img-fluid w-100 unrounded" src="https://via.placeholder.com/333x222" /></a>
+        </div>
+        <h6 class="website-name"><strong><a href="#" class="website-link">Website 4</a></strong></h6>
+        <p class="website-description">A brief description of this webpage</p>
+        <p class="website-languages">HTML | CSS | Javascript</p>
+      </div>
+
+
+
+    </div>    <!-- close row (portfolio section)-->
+
+    <!-- About me -->
+    <div class="row">
+      <div class="col-12 ">
+        About me
+      </div>
+    </div>    <!-- close row (About me section) -->
+
   </div>
 
 
-  <!-- <div id="hero" class="position-relative">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-auto mx-auto my-auto">
-          <h2 class="text-white  align-items-center">Eugene Cheung</h2>
-        </div>
-      </div>
 
 
-      <div class="row">
-        <div class="col-sm-12 col-md-4">
-          level 1, col-1
-        </div>
-      </div>
-
-    </div>  close container
-  </div> -->
 
 
   <!-- Optional JavaScript -->
