--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
           <a class="nav-link active text-white" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Portfolio</a>
+          <a class="nav-link text-white" href="#portfolio">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">About</a>
+          <a class="nav-link text-white" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Contact</a>
+          <a class="nav-link text-white" href="#contact">Contact</a>
         </li>
       </ul>
     </div>
@@ -72,7 +72,7 @@
 
 
 
-  <div class="container-fluid portfolio">
+  <div class="container-fluid" id="portfolio">
     <div class="row">
       <div class="col-12 text-center pt-5"><h3>Portfolio</h3></div>
     </div>
@@ -123,10 +123,23 @@
 
     <!-- About me -->
     <div class="row">
-      <div class="col-12 ">
-        About me
+      <div class="col-12 summary-header pt-5 pb-4" id="about">
+        A Brief Summary
       </div>
     </div>    <!-- close row (About me section) -->
+    <div class="row justify-content-center pb-5">
+      <div class="col-12 col-md-2">
+        <div class="aspectRatioBox mb-3 rounded" style="background-image: url('./images/profile-image.jpg')">
+        </div>
+      </div>
+      <div class="col-12 col-md-6 summary-body">
+        Since young, <strong>Eugene</strong> has possessed an unyielding desire to solve day-to-day challenges by rolling up his sleeves and applying his academic and vocational knowledge and skill sets.<br/><br/>
+
+        It is with this passion that has driven him towards programming and enrolling himself at Altcademy. He is currently learning web development and is hopeful of plying this acquired skill in forming his own startup one day.<br/><br/>
+
+        Find him on GitHub, LinkedIn, or by e-mail at <a href="#" class="e-mail-address" id="contact">eykcheung@gmail.com</a>.
+      </div>
+
 
   </div>
 
